--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "colorette": "^2.0.16",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.2.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "mariadb": "^2.5.5",
+    "nodemon": "^2.0.14",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "prettier": "2.4.1"
