--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fs": "^0.0.1-security",
     "mariadb": "^2.5.5",
     "nodemon": "^2.0.14",
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "prettier": "2.4.1"
